Fixed spacing issues on external search results

--- a/webapp/src/main/webapp/assets/stylesheets/ae-common-1.0.161024.css
+++ b/webapp/src/main/webapp/assets/stylesheets/ae-common-1.0.161024.css
@@ -103,6 +103,10 @@ ul#secondary-nav li.active > a {
     background: #eee
 }
 
+#ebi_search_results p, #ebi_search_results ul {
+    padding-left: 10px;
+    list-style-type: none;
+}
 
 #search-extras {
     float: right;
